2002-06-03  Bastien Nocera  <hadess@hadess.net>

	* gnotski.c: remove help menu item

2002-04-30  Bastien Nocera  <hadess@hadess.net>

	* gnotski.c: (expose_space): fix run-time warning, patch by Shahms E.
	King <shahms@shahms.com>

2002-04-30  Bastien Nocera  <hadess@hadess.net>

	* gnotski.c: (load_image), (about_cb): have a nice dialog when the map
	can't be loaded, add icon to about box

2002-04-29  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* gnotski.c: (main), (create_window), (expose_space),
	(gui_draw_pixmap), (configure_space), (create_space), (load_image),
	(new_move), (quit_game_cb): patch from Shahms E. King
	<shahms@shahms.com> to port gnotski

2002-04-15  Bastien Nocera  <hadess@hadess.net>

	* gnotski.c: (save_state): remove nstr(), patch from
	r_kinder@yahoo.com (Richard Kinder)

2002-02-02  Zbigniew Chyla  <cyba@gnome.pl>

	* gnotski.c (about_cb): Don't try to translate empty string.

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* gnotski.desktop:

	Install into the correct location and add a Categories
	field.
	
2001-12-04  Duarte Loreto <happyguy_pt@hotmail.com>

        * gnotski.desktop: Added Portuguese (pt) translation.

2001-07-27  Abel Cheung  <maddog@linux.org.hk>

	* gnotski.desktop: Added traditional Chinese translation.

2001-07-07  Juan Pablo Mendoza <pablo_juan@yahoo.com>

        * gnotski.c: So long imlib, you was a good friend but we don't
          like you any more, sorry.

2001-06-24  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	From Dean Scott <drscott12@hotmail.com>.
	
	* gnotski-icon.png: Added, gnotski.png wasn't really a icon.
	* Makefile.am (pixmap_DATA): Added gnotski-icon.png.
	* gnotski.c (main): Use gnotski-icon.png as the window icon.
	* gnotski.desktop: Use gnotski-icon.png. 

2001-06-23  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Prefix scoredir with $(DESTDIR).
	
2001-06-09  Juan Pablo Mendoza <pablo_juan@yahoo.com>
